WEB-171: [bugfix] weird spacing of .banner h1 on mobile

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -94,6 +94,9 @@ div.dropdown.menu-item {
   .primary-nav-right {
     padding-top: 7px; }
 
+  .banner h1 {
+    font-size: large !important; }
+
   .banner > *:first-child {
     margin-right: auto; }
 
@@ -191,7 +194,7 @@ div.dropdown.menu-item {
     font-family: 'Benton', sans-serif;
     font-weight: 400 !important;
     color: #333333;
-    font-size: 30px;
+    font-size: x-large;
     margin-top: 20px;
     margin-bottom: 20px; }
     .banner h1 a {
